--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -14,16 +14,23 @@
 {% endblock %}
 {% block body %}
 <div class="todos-Productos">
+    <form action="{{ path('product',{id:id_company}) }}" method="POST">
+        <p>Search Product: </p><input type="text" name="name" id="name">
+        <input type="submit" value="Submit">
+    </form>
 
-    <input type="search" name="buscador">
-    <a href="/"><button>Buscar Producto</button></a>
+    <br>
 
-    <h1 id="misProductos"> Mis Productos</h1>
+    <h1 id="misProductos">My Products</h1>
+    <br>
+    <a href="{{ path('addProduct',{id:id_company}) }}"><button>Add New Product + </button></a>
+    
     <ul>
-        {% for producto in productos %}
-            <li>{{producto.name}} -- > <button>Eliminar Producto </button><button> Editar Producto</button></li>
-        {% endfor %}
-
+       {% for p in products %}
+       
+            <li>{{p.name}}  ------>  <a href="{{ path('editProduct',{idProduct:p.id,id:id_company}) }}"><button>Editar Producto</button></a> <a href=""><button>Eliminar Producto</button></a></li>
+            
+       {% endfor %} 
     </ul>
 </div>
 {% endblock %}
