--- a/templates/company/showCompany.html.twig
+++ b/templates/company/showCompany.html.twig
@@ -10,43 +10,52 @@
 
     {% include 'header.html.twig' %}
     {% include 'menu-user.html.twig' %}
-    
-    <div class="container main-container">
+
+    <div class="container-fluid">
         <div class="row">
-            <div class="panel">
-                <div class="panel-heading">
-                    <h2>MI EMPRESA</h2>
-                </div>
-                <div class="panel-form">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="form-group">
-                                    <label for="nameCompany" class="control-label">Nombre Empresa</label>
-                                    <input type="text" id="nameCompany" class="form-control form-control-lg rounded-sm" readonly="readonly" value="{{ company.getName() }}">
-                                </div>
+            {% include 'menu-company.html.twig' %}
+
+            <div class="col-md-9 col-lg-10">
+                <div class="container main-container">
+                    <div class="row flex-xl-nowrap">
+                        <div class="panel">
+                            <div class="panel-heading">
+                                <h3>Mi Empresa</h3>
+                                <a href="{{ path('addNewBill', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
                             </div>
-                            <div class="col-sm-12">
-                                <div class="form-group">
-                                    <label for="fiscalAddressCompany" class="control-label">Direccion Fiscal</label>
-                                    <input type="text" id="fiscalAddressCompany" class="form-control form-control-lg rounded-sm" readonly="readonly" value="{{ company.getFiscalAddress() }}">
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-group">
-                                    <label for="emailCompany" class="control-label">Email Empresa</label>
-                                    <input type="text" id="emailCompany" class="form-control form-control-lg rounded-sm" readonly="readonly" value="{{ company.getEmail() }}">
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-group">
-                                    <label for="nifCompany" class="control-label">NIF Empresa</label>
-                                    <input type="text" id="nifCompany" class="form-control form-control-lg rounded-sm" readonly="readonly" value="{{ company.getNIF() }}">
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-actions">
-                                    <a href="/companies" class="btn btn-primary float-center">Volver a Empresas</a>
+                            <div class="panel-form">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <label for="nameCompany" class="control-label">Nombre Empresa</label>
+                                                <input type="text" id="nameCompany" class="form-control form-control-lg rounded-sm" readonly="readonly" value="{{ company.getName() }}">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <label for="fiscalAddressCompany" class="control-label">Direccion Fiscal</label>
+                                                <input type="text" id="fiscalAddressCompany" class="form-control form-control-lg rounded-sm" readonly="readonly" value="{{ company.getFiscalAddress() }}">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <label for="emailCompany" class="control-label">Email Empresa</label>
+                                                <input type="text" id="emailCompany" class="form-control form-control-lg rounded-sm" readonly="readonly" value="{{ company.getEmail() }}">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <label for="nifCompany" class="control-label">NIF Empresa</label>
+                                                <input type="text" id="nifCompany" class="form-control form-control-lg rounded-sm" readonly="readonly" value="{{ company.getNIF() }}">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <div class="form-actions">
+                                                <a href="/companies" class="btn btn-primary float-center">Volver a Empresas</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -55,5 +64,11 @@
             </div>
         </div>
     </div>
+
+    {% block footer_javascripts %}
+        
+        <script src="{{ asset("js/menu-company.js") }}"></script>
+
+    {% endblock %}
 
 {% endblock %}
