--- a/templates/menu-company.html.twig
+++ b/templates/menu-company.html.twig
@@ -4,8 +4,11 @@
     <h4>Empresa</h4>
 
     <ul class="menu-company-elements">
+        <li id="option-company">
+            <a href="{{ path('showCompany', {id:company_id}) }}"><span>Detalle</span> <i class="fas fa-building"></i></a>
+        </li>
         <li id="option-invoice">
-            <a href="{{ path('bills', {id:id_company}) }}"><span>Facturas</span> <i class="fas fa-file-invoice"></i></a>
+            <a href="{{ path('bills', {id:company_id}) }}"><span>Facturas</span> <i class="fas fa-file-invoice"></i></a>
         </li>
         <li id="option-clients">
             <a href="#"><span>Clientes</span> <i class="fas fa-users"></i></a>
