--- a/templates/bill/bill.html.twig
+++ b/templates/bill/bill.html.twig
@@ -33,7 +33,7 @@
         </tr>
         <tr>
             <th>Iva de la Factura</th>
-            <td>{{ bill.totalBillIva }}</td>
+            <td>{{ bill.amountIVA }}</td>
         </tr>
         <tr>
             <th>Líneas de Pedido de la Factura</th>
@@ -41,7 +41,7 @@
         </tr>
         <tr>
             <th>Importe Total de la Factura</th>
-            <td>{{ bill.totalBillImport }}</td>
+            <td>{{ bill.totalInvoiceAmount }}</td>
         </tr>
     </table>
 
