--- a/public/css/main2.css
+++ b/public/css/main2.css
@@ -348,3 +348,8 @@
 #searchDate div {
     margin-right: 6px;
 }
+
+.invoice-form .table-bordered {
+    margin-top: 8px;
+    margin-bottom: 16px;
+}
