--- a/templates/bill/index.html.twig
+++ b/templates/bill/index.html.twig
@@ -51,7 +51,7 @@
                                         <th scope="col">Importe I.V.A.</th>
                                         <th scope="col">Importe sin I.V.A.</th>
                                         <th scope="col">Importe Total</th>
-                                        <th width="75px" scope="col">Ver</th>
+                                        <th width="75px" scope="col">PDF</th>
                                         <th width="75px" scope="col">Editar</th>
                                         <th width="75px" scope="col">Eliminar</th>
                                     </tr>
