--- a/templates/bill/pdf_bill.html.twig
+++ b/templates/bill/pdf_bill.html.twig
@@ -13,8 +13,9 @@
                     <th scope="col">Nº de factura</th>
                     <th scope="col">Fecha</th>
                     <th scope="col">Descripción</th>
-                    <th scope="col">Total IVA</th>
-                    <th scope="col">Importe total</th>
+                    <th scope="col">Importe I.V.A.</th>
+                    <th scope="col">Importe sin I.V.A.</th>
+                    <th scope="col">Importe Total</th>
                 </tr>
             </thead>
             <tbody>
@@ -33,7 +34,6 @@
         
         <table id="table-invoice-lines">
             <tr>
-                <th scope="col">Producto</th>
                 <th scope="col">Descripción</th>
                 <th scope="col">Cantidad</th>
                 <th scope="col">Precio</th>
@@ -42,7 +42,6 @@
             </tr>
             {% for billLine in bill.billLines %}
                 <tr>
-                    <td>{{ billLine.product.name }}</td>
                     <td>{{ billLine.description }}</td>
                     <td>{{ billLine.quantity }}</td>
                     <td>{{ billLine.price }}€</td>
