--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -31,8 +31,8 @@
                                      id="añadir" /></a></h1>
         
             <form action="{{ path('search', {id: company_id})}}" method="POST" id="search">
-                    <input type="search" id="buscador" placeholder=" Buscar...">
-                    <button type="submit">Buscar</button>        
+                    <input type="search" id="buscador" name="buscador" placeholder=" Buscar...">
+                    <button type="submit" >Buscar</button>        
             </form>              
         </div>
         <div id="clientes">
