--- a/templates/form/addNewBill.html.twig
+++ b/templates/form/addNewBill.html.twig
@@ -51,6 +51,7 @@
                                                 <thead>
                                                     <tr>
                                                         <th scope="col">#</th>
+                                                        <th scope="col">Producto</th>
                                                         <th scope="col">Concepto</th>
                                                         <th scope="col">Cantidad</th>
                                                         <th scope="col">Precio(€)</th>
@@ -62,6 +63,11 @@
                                                 <tbody>
                                                     <tr>
                                                         <th scope="row">1</th>
+                                                        <td>
+                                                            <select id="add_new_bill_billLines_1_product" name="add_new_bill[billLines][1][product]" class="form-control form-control-lg rounded-sm">
+                                                                <option>-------</option>
+                                                            </select>
+                                                        </td>
                                                         <td><input id="add_new_bill_billLines_1_description" name="add_new_bill[billLines][1][description]" type="text" class="form-control rounded-sm" required></td>
                                                         <td><input min="1" id="add_new_bill_billLines_1_quantity" name="add_new_bill[billLines][1][quantity]" type="number" class="form-control rounded-sm invoice-quantity" required></td>
                                                         <td><input min="0" id="add_new_bill_billLines_1_price" name="add_new_bill[billLines][1][price]" type="number" class="form-control rounded-sm invoice-price" required></td>
