--- a/templates/product/add.html.twig
+++ b/templates/product/add.html.twig
@@ -5,7 +5,7 @@
 
 {% endblock %}
 {% block body %}
-<h3>Add Product</h3>
+<h3>Añadir nuevo producto</h3>
     {{form(form)}}
-<a href="{{ path('product',{id:idCompany}) }}">Back to products</a>
+<a href="{{ path('product',{id:company_id}) }}">Back to products</a>
 {% endblock %}
