--- a/templates/product/editProduct.html.twig
+++ b/templates/product/editProduct.html.twig
@@ -7,5 +7,5 @@
 {% block body %}
 <h3>Edit Product</h3>
     {{form(form)}}
-<a href="{{ path('product',{id:id_company}) }}">Back To Products</a>
+<a href="{{ path('product',{id:company_id}) }}">Back To Products</a>
 {% endblock %}
