--- a/templates/product/add.html.twig
+++ b/templates/product/add.html.twig
@@ -5,6 +5,20 @@
 
 {% endblock %}
 {% block body %}
+{% include 'header.html.twig' %}
+{% include 'menu-user.html.twig' %}
+
+    <div class="container-fluid">
+        <div class="row">
+            {% include 'menu-company.html.twig' %}
+
+            <div class="col-md-9 col-lg-10">
+                <div class="container main-container">
+                    <div class="row flex-xl-nowrap">
+                        <div class="panel panel-table">
+                            <div class="panel-heading">
+                            
+
 <h3>Añadir nuevo producto</h3>
     {{form(form)}}
 <a href="{{ path('product',{id:company_id}) }}">Back to products</a>
