--- a/templates/product/editProduct.html.twig
+++ b/templates/product/editProduct.html.twig
@@ -1,10 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Edit Product{% endblock %}
-{% block stylesheets %}
-
-{% endblock %}
 {% block body %}
+{% include 'header.html.twig' %}
+{% include 'menu-user.html.twig' %}
+
+    <div class="container-fluid">
+        <div class="row">
+            {% include 'menu-company.html.twig' %}
+
+            <div class="col-md-9 col-lg-10">
+                <div class="container main-container">
+                    <div class="row flex-xl-nowrap">
+                        <div class="panel panel-table">
+                            <div class="panel-heading">
 <h3>Edit Product</h3>
     {{form(form)}}
 <a href="{{ path('product',{id:company_id}) }}">Back To Products</a>
