--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -13,7 +13,7 @@
                     <div class="row flex-xl-nowrap">
                         <div class="panel panel-table">
                             <div class="panel-heading">
-                             <h3>Facturas</h3>
+                             <h3>Productos</h3>
                                 <a href="{{ path('addNewBill', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
                             </div>
                             <div class="panel-search">
@@ -80,5 +80,5 @@
         
         <script src="{{ asset("js/menu-company.js") }}"></script>
 
-{% endblock %}
+    {% endblock %}
 {% endblock %}
