--- a/templates/menu-company.html.twig
+++ b/templates/menu-company.html.twig
@@ -14,7 +14,7 @@
             <a href="#"><span>Clientes</span> <i class="fas fa-users"></i></a>
         </li>
         <li id="option-products">
-            <a href="#"><span>Productos</span> <i class="fas fa-tags"></i></a>
+            <a href="{{ path('product', {id:company_id}) }}"><span>Productos</span> <i class="fas fa-tags"></i></a>
         </li>
     </ul>
 
