--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -13,8 +13,8 @@
                     <div class="row flex-xl-nowrap">
                         <div class="panel panel-table">
                             <div class="panel-heading">
-                             <h3>Facturas</h3>
-                                <a href="{{ path('addNewBill', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
+                             <h3>Productos</h3>
+                                <a href="{{ path('addProduct', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
                             </div>
                             <div class="panel-search">
                                 <form action="{{ path('product',{id:company_id}) }}" method="POST">
@@ -39,10 +39,8 @@
                                         <tr>
                                         <td>{{counter}}</td>
                                         <td>{{p.name}} </td>
-                                         {% if counter < 2 %}
-                                                <td><a href="{{ path('editProduct',{idProduct:p.id,id:company_id}) }}"><button name="edit" class="edit"><i class="fas fa-edit"></i></button></a></td>
-                                                <td><a href="{{ path('deleteProduct',{idProduct:p.id,id:company_id}) }}"><button name="delete" class="delete"><i class="far fa-trash-alt"></i></button></a></td>
-                                            {% endif %}
+                                        <td><a href="{{ path('editProduct',{idProduct:p.id,id:company_id}) }}"><button name="edit" class="edit"><i class="fas fa-edit"></i></button></a></td>
+                                        <td><a href="{{ path('deleteProduct',{idProduct:p.id,id:company_id}) }}"><button name="delete" class="delete"><i class="far fa-trash-alt"></i></button></a></td>
                                         </tr>
 
                                     {% endfor %} 
