--- a/templates/bill/index.html.twig
+++ b/templates/bill/index.html.twig
@@ -24,7 +24,7 @@
                         <div class="panel panel-table">
                             <div class="panel-heading">
                                 <h3>Facturas</h3>
-                                <a href="{{ path('addProduct', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
+                                <a href="{{ path('addNewBill', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
                             </div>
                             <div class="panel-search">
                                 <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDate">
