--- a/templates/form/addnewclient.html.twig
+++ b/templates/form/addnewclient.html.twig
@@ -1,28 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
-    {% block stylesheets %}
-        {{ parent() }}
-        <link rel="stylesheet" href="{{ asset("css/main.css") }}">
-    {% endblock %}
+{% block title %}Facturas{% endblock %}
+
+{% block javascripts %}
+
+    {{ parent() }}
+    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
+    <script type="text/javascript" src="{{ asset("js/ClientInfo.js") }}"></script>
+    <link rel="stylesheet" href="{{ asset("css/main.css") }}">
+
+{% endblock %}
+
 {% block body %}
-   
 
+    {% include 'header.html.twig' %}
+    {% include 'menu-user.html.twig' %}
 
-<main>
-    
-    <header>
+    <div class="container-fluid">
+        <div class="row">
+            {% include 'menu-company.html.twig' %}
 
-        <div id="cabecera">
-            <img src="{{asset("img/logo1.png")}}" alt="Logo" id="logo">
-            <h1>Factura Fácil</h1>
-                <a href="#"><img src="{{asset("img/avatar.png")}}" alt="Avatar"/></a>
-        </div>
+            <div class="col-md-9 col-lg-10">
+                <div class="container main-container">
+                    <div class="row flex-xl-nowrap">
+                        <div class="panel panel-table">
+                            <div class="panel-heading">
+                                
 
-    </header>
-
-    
-    <section id="sectionRegister">
+     <section id="sectionRegister">
         <h1>Añadir Nuevo Cliente</h1>
         <div id="Register">
         {{ form_start(registrationForm) }}
@@ -37,20 +42,21 @@
         {{ form_end(registrationForm) }}
         </div>
     </section>
+ 
+    <input type="button" onclick="history.back()" name="Back" value="Back" id="backR">
 
-    
+    {% block footer_javascripts %}
+        
+        <script src="https://unpkg.com/jspdf@1.5.3/dist/jspdf.min.js"></script>
+        <script src="https://unpkg.com/jspdf-autotable@3.2.13/dist/jspdf.plugin.autotable.js"></script>
+        <script src="{{ asset("js/invoice.js") }}"></script>
+        <script src="{{ asset("js/menu-company.js") }}"></script>
 
-    <aside id="menu">
-        <a href="#"><h2>Mi Empresa</h2></a>
-        <a href="#"><h2>Productos</h2></a>
-        <a href="#"><h2>Facturas</h2></a>
-        <a href="#"><h2>Clientes</h2></a>
-        <a href="#"><h2>Mi Perfil</h2></a>
-    </aside>
-    
-    
-</main>
+    {% endblock %}
 
-<!--Botón para volver a la última página visitada-->
-<input type="button" onclick="history.back()" name="Back" value="Back" id="backR">
 {% endblock %}
+
+
+
+
+
